# compact_prompt

./: .dockerignore  .readthedocs.yaml  CLAUDE.md  Dockerfile  README.md  THIRD_PARTY_NOTICES.md  compactprompt_app.py  mkdocs.yml  pyproject.toml  server.json  streamlit_app.py
.github/: dependabot.yml
.github/workflows/: publish-alias.yml  publish.yml  pylint.yml  tests.yml
.streamlit/: config.toml
agent-skills/: INSTRUCTIONS.md  PUBLISHING.md  README.md  install.sh
alias/compact-prompt/: README.md  pyproject.toml
compactprompt/: __init__.py  __main__.py  caveman.py  cli.py  embedding.py  examples.py  fidelity.py  files.py  hard_prompt.py  llmlingua.py  markdown.py  mcp_server.py  ngram.py  pipeline.py  quantize.py  scoring.py  tokens.py
docs/: api-reference.md  engines.md  faq.md  files-and-skills.md  getting-started.md  index.md  strategies.md
examples/: quickstart.py
tests/: test_caveman.py  test_cli.py  test_files.py  test_hard_prompt.py  test_llmlingua.py  test_markdown.py  test_mcp.py  test_ngram.py  test_optional_deps.py  test_pipeline.py  test_quantize.py  test_scoring.py  test_tokens.py
