[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compactprompt"
version = "0.1.0"
description = "Easy-to-use prompt & data compression for LLM workflows (CompactPrompt, Choi et al. 2025, arXiv:2510.18043)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "CompactPrompt contributors" }]
keywords = ["llm", "prompt-compression", "tokens", "nlp", "quantization"]
dependencies = [
    # The core library has NO hard dependencies — `CompactPrompt.compact(text)`
    # runs on a clean Python install. Heavy libraries are imported lazily, only
    # when the strategy that needs them is actually used (see optional extras).
]

[project.optional-dependencies]
# Better static self-information scores from a global word-frequency table.
freq = ["wordfreq>=3.0"]
# Dynamic self-information (context-aware token surprisal) via a local HF model.
dynamic = ["torch>=2.0", "transformers>=4.36"]
# Phrase-level (grammar-preserving) pruning.
phrases = ["spacy>=3.7"]
# Numeric quantization (k-means) and few-shot exemplar selection.
ml = ["numpy>=1.24", "scikit-learn>=1.3"]
# Semantic embeddings for exemplar selection and fidelity metrics.
embeddings = ["sentence-transformers>=2.2"]
# Precise token counting that matches the OpenAI/Anthropic tokenizers.
tokenizer = ["tiktoken>=0.5"]
# Everything, for a faithful reproduction of the paper.
all = [
    "wordfreq>=3.0",
    "torch>=2.0",
    "transformers>=4.36",
    "spacy>=3.7",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "sentence-transformers>=2.2",
    "tiktoken>=0.5",
    "pandas>=2.0",
]
dev = ["pytest>=7.4"]

[project.urls]
"Paper" = "https://arxiv.org/abs/2510.18043"

[tool.setuptools.packages.find]
include = ["compactprompt*"]
