[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compactprompt"
dynamic = ["version"]                # version is derived from git tags by setuptools-scm
description = "Easy-to-use prompt & data compression for LLM workflows."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "CompactPrompt contributors" }]
keywords = ["llm", "prompt-compression", "tokens", "nlp", "quantization"]
dependencies = [
    # The core library has NO hard dependencies — `CompactPrompt.compact(text)`
    # runs on a clean Python install. Heavy libraries are imported lazily, only
    # when the strategy that needs them is actually used (see optional extras).
]

[project.optional-dependencies]
# Better static self-information scores from a global word-frequency table.
freq = ["wordfreq>=3.0"]
# Dynamic self-information (context-aware token surprisal) via a local HF model.
dynamic = ["torch>=2.0", "transformers>=4.36"]
# Phrase-level (grammar-preserving) pruning.
phrases = ["spacy>=3.7"]
# Numeric quantization (k-means) and few-shot exemplar selection.
ml = ["numpy>=1.24", "scikit-learn>=1.3"]
# Semantic embeddings for exemplar selection and fidelity metrics.
embeddings = ["sentence-transformers>=2.2"]
# Precise token counting that matches the OpenAI/Anthropic tokenizers.
tokenizer = ["tiktoken>=0.5"]
# The interactive Streamlit demo (compactprompt_app.py).
app = ["streamlit>=1.30", "tiktoken>=0.5"]
# LLMLingua as an alternative perplexity-based pruning engine.
llmlingua = ["llmlingua>=0.2"]
# Caveman LLM-based compression engine (default LLM caller uses the Anthropic SDK).
caveman = ["anthropic>=0.39"]
# Everything, for a faithful reproduction of the paper.
all = [
    "wordfreq>=3.0",
    "torch>=2.0",
    "transformers>=4.36",
    "spacy>=3.7",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "sentence-transformers>=2.2",
    "tiktoken>=0.5",
    "pandas>=2.0",
    "llmlingua>=0.2",
    "anthropic>=0.39",
]
dev = ["pytest>=7.4"]
# Building the documentation site (MkDocs + Material + API autodoc).
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "mkdocs-include-markdown-plugin>=6.0",
]

[project.scripts]
compactprompt = "compactprompt.cli:main"

[project.urls]
"Paper" = "https://arxiv.org/abs/2510.18043"

[tool.setuptools]
# Ship the project license plus third-party attributions in the distribution.
license-files = ["LICENSE", "THIRD_PARTY_NOTICES.md"]

[tool.setuptools.packages.find]
include = ["compactprompt*"]

[tool.setuptools_scm]
# Version comes from the latest git tag (e.g. tag "v0.1.0" -> version "0.1.0").
# Between tags you get a dev version like "0.1.1.dev3+g<hash>". `fallback_version`
# is used only when building outside a git checkout without scm metadata.
fallback_version = "0.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.pylint.main]
# Optional heavy dependencies are imported lazily; pylint can't always resolve
# them and that's fine — they are genuinely optional at runtime.
ignored-modules = [
    "torch",
    "transformers",
    "spacy",
    "sklearn",
    "sentence_transformers",
    "wordfreq",
    "tiktoken",
    "numpy",
    "pandas",
    "pytest",
    "streamlit",
    "llmlingua",
    "anthropic",
]

[tool.pylint.basic]
# Short names that are idiomatic in numeric / ML code.
good-names = ["X", "i", "j", "k", "n", "e", "s", "a", "b", "c", "q", "lo", "hi", "df", "ph", "_"]

[tool.pylint."messages control"]
disable = [
    # Lazy/optional imports are a deliberate design choice (cheap top-level import).
    "import-outside-toplevel",
    # Optional-dependency probes and model loads legitimately catch broadly.
    "broad-exception-caught",
    # Configurable, fully-documented public APIs intentionally take many options.
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-locals",
    "too-few-public-methods",
    "too-many-instance-attributes",
    # Tests are self-describing; docstrings add noise without value there.
    "missing-function-docstring",
]
