[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

# Alias / shim package. `compact-prompt` and `compact_prompt` both normalize to
# the PyPI name `compact-prompt`, which is distinct from `compactprompt`. This
# metapackage carries no code — installing it just installs `compactprompt`, so
# `pip install compact-prompt` and `pip install compact_prompt` both work.
[project]
name = "compact-prompt"
version = "0.4.0"
description = "Alias for compactprompt — installs the compactprompt package."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "CompactPrompt contributors" }]
keywords = ["llm", "prompt-compression", "tokens", "alias"]
dependencies = ["compactprompt>=0.4.0"]

[project.urls]
"Package" = "https://pypi.org/project/compactprompt/"
"Source" = "https://github.com/gtkcyber/compact_prompt"
"Documentation" = "https://compact-prompt.readthedocs.io/"

# No modules — this package only carries metadata and the dependency above.
[tool.setuptools]
py-modules = []
